# ezt-mcp

./: .gitignore  CHANGELOG.md  CONSTITUTION.md  DESIGN.md  FUNCTIONAL_SPEC.md  MAP_COMPONENT.md  README.md  SCENARIOS.md  SDLC.md  TECHNICAL_SPEC.md  VISION.md  pyproject.toml
examples/: point_range_demo.summary.json  powerbi_zip2terr.direct_build.json  powerbi_zip2terr.summary.json  powerbi_zip2terr_first.summary.json
ezt_mcp/: __init__.py  auth.py  cli.py  config.py  jobs.py  observability.py  part_selection.py  server.py  workers.py
ezt_mcp/db/: __init__.py  jobs.py  map_sessions.py  part_layers.py  parts.py
ezt_mcp/map_component/: __init__.py  part_layers.py  routes.py  sessions.py
ezt_mcp/resources/: __init__.py  part_layers.py
ezt_mcp/territory/: __init__.py  dissolve.py  hierarchy.py  repair.py
ezt_mcp/tools/: __init__.py  (+3 more)
migrations/: 001_transient_jobs.sql  003_job_payloads_limits.sql
schemas/: README.md  analyze.schema.json  auto_build.schema.json  common.schema.json  direct_build.schema.json  get_map_visualization.schema.json  job.schema.json  map_session_create.schema.json  part_layers.schema.json  part_selection.schema.json  query_parts.schema.json  realign.schema.json  ts-reference.schema.json  validate_examples.py
scripts/: build_direct_from_excel.py  build_part_layer_pmtiles.py  build_part_layer_pmtiles_tippecanoe.py  create_point_range_demo.py  migrate_map_sessions.py  smoke_direct_build.py  smoke_mc_progress.py  smoke_mcp_resources.py  smoke_mcp_tools.py  zip_scalability.py
tmp/: mv-agent-mcp-selection-workflow-2026-05-11.md
(+61 files in other folders)
