[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezt-mcp"
version = "0.1.0"
description = "EasyTerritory MCP Server — agentic territory intelligence"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "EasyTerritory", email = "brian@easyterritory.com" },
]
dependencies = [
  "mcp[cli]>=1.0",
  "starlette>=0.40",
  "uvicorn>=0.30",
  "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
ezt-mcp = "ezt_mcp.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
